| Summary: | ASTERISK-26330: app_queue: Changing the "ringinuse" parameter of a queue doesn't affect dynamic members | ||
| Reporter: | Etienne Lessard (hexanol) | Labels: | |
| Date Opened: | 2016-08-31 14:14:53 | Date Closed: | 2016-10-11 12:39:27 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 13.10.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) AST26330.patch | |
| Description: | Given I have a queue with "ringinuse = no"
And this queue has a dynamic member (e.g. a member that was added via the CLI "queue add" or the AMI action "QueueAdd") When I modify queues.conf to set "ringinuse = yes" for this queue And I do a "module reload app_queue.so" Then the dynamic member's "ringinuse" value is still "no" This is a bit of an annoying behavior since: * there's no way to specify the "ringinuse" value of a dynamic member (contrary to static members), i.e. when you add a dynamic member to a queue, the member "ringinuse" value is always the same as the queue "ringinuse" value. * if you then change the "ringinuse" value of the queue, your dynamic members are not affected, and you must remove/add them if you want the new setting to apply (or use the AMI action "QueueMemberRingInUse", but this is not practical) Static members do not share the same behaviour, i.e. when a static member (with no per-member ringinuse defined) is reloaded, it takes the new queue ringinuse value. So I would propose to change the behaviour so that, on reload, dynamic members "ringinuse" value is updated. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-08-31 14:14:53.793-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Etienne Lessard (hexanol) 2016-08-31 14:17:50.627-0500 I'm attaching a small patch that I wrote. I could push something similar to gerrit (I'm not 100% sure about the locking) if someone thinks it's a good idea. By: Rusty Newton (rnewton) 2016-09-07 16:19:44.349-0500 [~hexanol] a couple of us looked it over and as far as we can tell it is a good idea. I'd say go ahead and push it up for review. By: Etienne Lessard (hexanol) 2016-09-09 13:10:31.898-0500 Alright, I've pushed a change for review: https://gerrit.asterisk.org/3874 (I do plan on cherry-picking the change to the other branches if this change gets a positive review) By: Etienne Lessard (hexanol) 2016-10-11 12:35:03.840-0500 The change has been merged into the master branch on 2016-10-04 (and won't be merged into the other branches since it brings a small behavior change), so I'm guessing this ticket's status should be set to "Closed" ? Changing the ticket status is usually done when the change is merged, right ? Thanks By: Joshua C. Colp (jcolp) 2016-10-11 12:39:27.684-0500 It is and I've marked this as closed. The commit did not include a #close so it did not automatically do it. | ||